--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/x-icon" href="../static/images/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<title>Simister Allotments</title>
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
