--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/x-icon" href="../static/images/favicon.png" />
+		<link rel="icon" type="image/x-icon" href="favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		<title>Simister Allotments</title>
 	</head>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LY7MNT8GPM"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-LY7MNT8GPM');
+	</script>
+
 	<body>
 		<div>%sveltekit.body%</div>
 	</body>
