GDPR compliant Google Analytics

--- a/src/app.html
+++ b/src/app.html
@@ -9,12 +9,26 @@
 	</head>
 
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LY7MNT8GPM"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+		gtag('consent', 'default', {
+			'ad_storage': 'denied',
+			'analytics_storage': 'denied'
+		});
 
+		function grant_analytics()
+		{
+			gtag('consent', 'update', {
+				'ad_storage': 'granted',
+				'analytics_storage': 'granted'
+			});
+		}
+
+	</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LY7MNT8GPM"></script>
+	<script>
+		gtag('js', new Date());
 		gtag('config', 'G-LY7MNT8GPM');
 	</script>
 
